--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "gatsby": "^3.13.1",
-    "gatsby-plugin-sass": "^4.14.0",
+    "axios": "^0.21.4",
+    "gatsby": "^2.32.13",
+    "gatsby-link": "^3.14.0",
+    "gatsby-plugin-sass": "^3.2.0",
+    "gatsby-react-router-scroll": "^4.14.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "sass": "^1.42.1"
