--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
   },
   "dependencies": {
     "axios": "^0.21.4",
-    "gatsby": "^2.32.13",
+    "gatsby": "^3.14.1",
     "gatsby-link": "^3.14.0",
-    "gatsby-plugin-sass": "^3.2.0",
+    "gatsby-plugin-sass": "^4.14.0",
     "gatsby-react-router-scroll": "^4.14.0",
+    "gatsby-source-filesystem": "^3.14.0",
+    "gatsby-transformer-remark": "^4.11.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "sass": "^1.42.1"
