--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
   },
   "dependencies": {
     "axios": "^0.21.4",
+    "bulma": "^0.9.3",
     "gatsby": "^3.14.1",
     "gatsby-link": "^3.14.0",
     "gatsby-plugin-sass": "^4.14.0",
     "gatsby-react-router-scroll": "^4.14.0",
+    "gatsby-remark-prismjs": "^5.11.0",
     "gatsby-source-filesystem": "^3.14.0",
     "gatsby-transformer-remark": "^4.11.0",
+    "prismjs": "^1.25.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "sass": "^1.42.1"
