--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gatsby-blog",
   "version": "1.0.0",
   "private": true,
-  "description": "gatsbyBlog",
+  "description": "Blog app using Gatsby JS(Gatsby v3) framework, React/GraphQL and JAMStack architecture",
   "author": "crissesoto",
   "keywords": [
     "gatsby"
@@ -19,6 +19,7 @@
     "bulma": "^0.9.3",
     "gatsby": "^3.14.1",
     "gatsby-link": "^3.14.0",
+    "gatsby-plugin-react-helmet": "^4.14.0",
     "gatsby-plugin-sass": "^4.14.0",
     "gatsby-react-router-scroll": "^4.14.0",
     "gatsby-remark-prismjs": "^5.11.0",
@@ -28,6 +29,7 @@
     "prismjs": "^1.25.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "sass": "^1.42.1"
   }
 }
