--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bulma": "^0.9.3",
     "gatsby": "^3.14.1",
     "gatsby-link": "^3.14.0",
+    "gatsby-plugin-feed": "^3.14.0",
     "gatsby-plugin-react-helmet": "^4.14.0",
     "gatsby-plugin-sass": "^4.14.0",
     "gatsby-react-router-scroll": "^4.14.0",
