--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "axios": "^0.21.4",
     "bulma": "^0.9.3",
+    "dotenv": "^10.0.0",
     "gatsby": "^3.14.1",
     "gatsby-link": "^3.14.0",
     "gatsby-plugin-feed": "^3.14.0",
