--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "gatsby": "^3.14.1",
     "gatsby-link": "^3.14.0",
     "gatsby-plugin-feed": "^3.14.0",
+    "gatsby-plugin-manifest": "^3.14.0",
+    "gatsby-plugin-offline": "^4.14.0",
     "gatsby-plugin-react-helmet": "^4.14.0",
     "gatsby-plugin-sass": "^4.14.0",
     "gatsby-react-router-scroll": "^4.14.0",
